
 1.0rc4
 - flash: wrapped the simplejson.loads() in a try/except to handle when the json sent by the browser does not validate.
 1.0
 No changes, 1.0rc4 renamed to 1.0

 1.1
 - cron: added
 admin interface: a small piece added for cron, will be expanded to support all utilities where applicable

 1.1.1
 - session and flash: added no_cache_headers() method that is called whenever either
        class is loaded. This should stop any problems with browser caching.
 - ROTModel - new Model class added that retries put operations when db.Timeout is encountered.
 - sessions and cache: Retuned the cleanup routines default settings. It will happen more often, but will delete less instances, lowering the amount of time required to run the operation in an effort to avoid deadline exceded errors in applications.
 - session - uses the new ROTModel for both session and session data.
 - session - rewrote the Cookie handling process to work better with other applications that use the cookies in applications, Google Analytics for example.
 - cron - Fixed a bug in the form for deleting cron entries.
 - Project - The 1.1 branch is now the suggested branch to use, 1.0 is being deprecated.
 
 1.1.2
 - session: Added last_activity_update variable to set an interval for which last_activity needs to be updated. It defaults to 60 seconds. This means a put is not required every request which should increase performance.
 - session: Refactored based on a contribution from Jeremy Awon optimizing the class initialization.
 - session: Bug found in the process to clear old sessions that was deleting data it shouldn't be. This was the cause of the mysterious missing session data bug. Thank you pant.lalit 
 - session: Bug fixed where clean_check_percent was being ignored.
 - session: Some tweaks done to delete_all_session(), though this feature shouldn't be considered complete yet. Needs more testing.

1.1.3
 - session: bugfix to handle str() and len() methods when there is no session data